--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+<style>
+   .brd {
+        border: 4px solid black; /* Параметры границы */
+        background: #fc3; /* Цвет фона */
+        padding: 10px; /* Поля вокруг текста */
+   }
+</style>
 <head>
     <meta charset="UTF-8">
     <title>Base</title>
