--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,24 @@
 {% extends 'base.html' %}
-
 {% block content %}
 <div>
     <a href="{% url 'logout' %}">Logout</a>
 </div>
+    <div>index</div>
+    <div>
+        {% for obj in object_list %}
+            <div class="brd">
+                <p>{{ obj.name }}</p>
+                <p>{{ obj.text }}</p>
+                <p>Price: {{ obj.price }}, in stock {{ obj.stock }}</p>
+            </div>
+        {% endfor %}
+    </div>
+
+    <form method="post" action="{% url 'product-create' %}">
+        {% csrf_token %}
+        {{ create_form }}
+        <input type="submit" value="Create">
+    </form>
+
+
 {% endblock %}
